Add a Cart To My E-Commerce

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <ng-container *ngIf="isHomePage">
   <app-portfolio></app-portfolio>
-  <app-services></app-services>
+  <app-work></app-work>
 </ng-container>
 
 <app-footer></app-footer>
