--- a/Angular/src/app/components/header/header.component.html
+++ b/Angular/src/app/components/header/header.component.html
@@ -18,8 +18,10 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/cart" routerLinkActive="active">Cart</a>
+        </li>
       </ul>
     </div>
-
   </div>
 </nav>
