Edit A Template Driven Form Input

--- a/Angular/src/app/components/contact/contact.component.html
+++ b/Angular/src/app/components/contact/contact.component.html
@@ -1,7 +1,7 @@
 <!--! Template Driven Form -->
 <div class="container py-5" [ngStyle]="{ 'background-color': bgColorTemplateDriven }">
   <h2>Template Driven Form</h2>
-  <form #ageForm="ngForm" (ngSubmit)="onSubmitTemplateDriven(tdForm)" class="w-50 mx-auto needs-validation" novalidate>
+  <form #ageForm="ngForm" (ngSubmit)="onSubmitTemplateDriven(ageForm)" class="w-50 mx-auto needs-validation" novalidate>
 
     <div class="mb-3">
       <label for="tdName" class="form-label">Name</label>
